--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
@@ -17,6 +18,7 @@
     "@mui/x-date-pickers": "^6.19.8",
     "@tanstack/react-query": "^5.28.6",
     "axios": "^1.6.8",
+    "framer-motion": "^11.0.20",
     "material-react-table": "^2.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -30,6 +32,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "react-router-dom": "^6.22.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
