--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "uid": "^2.0.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install-server": "cd back-end && npm install",
+    "start-server": "cd back-end && node run dev:start",
+    "install-client": "cd front-end && npm install",
+    "build-client": "cd front-end && npm run build",
+    "start-client": "cd front-end && npm run dev"
   },
   "author": "mehdi ergaibi",
   "license": "ISC"
