--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
     "@mui/lab": "^5.0.0-alpha.169",
-    "@mui/material": "^5.15.14",
+    "@mui/material": "^5.15.15",
+    "@mui/x-charts": "^7.1.1",
     "@mui/x-date-pickers": "^6.19.8",
     "@tanstack/react-query": "^5.28.6",
     "axios": "^1.6.8",
